--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#E91E63</color>
     <color name="colorPrimaryDark">#D81B60</color>
     <color name="colorAccent">#40C4FF</color>
+    <color name="cardview_initial_background">#71C3DE</color>
 </resources>
