--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/tools">
 
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,63 +12,75 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        >
+        android:dividerPadding="4dp"
+        android:weightSum="1">
+
         <android.support.v7.widget.CardView
             android:id="@+id/cardview"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:elevation="100dp"
+            android:elevation="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
             card_view:cardBackgroundColor="@color/cardview_initial_background"
             card_view:cardCornerRadius="8dp"
             android:layout_marginLeft="@dimen/margin_large"
             android:layout_marginRight="@dimen/margin_large"
-            >
+            card_view:cardUseCompatPadding="true"
+            android:layout_weight="0.63"
+            android:clickable="true"
+            card_view:cardElevation="8dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_medium"
-                android:text="@string/cardview_contents"
+                android:text="@string/text1"
+                />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardview2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            card_view:cardBackgroundColor="@color/cardview_initial_background"
+            card_view:cardCornerRadius="8dp"
+            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginRight="@dimen/margin_large"
+            card_view:cardUseCompatPadding="true"
+            android:clickable="true"
+            card_view:cardElevation="0dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/margin_medium"
+                android:text="@string/text2"
                 />
         </android.support.v7.widget.CardView>
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardview3"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_large"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_width="@dimen/seekbar_label_length"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/cardview_radius_seekbar_text"
-                />
-            <SeekBar
-                android:id="@+id/cardview_radius_seekbar"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                />
-        </LinearLayout>
+            android:elevation="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            card_view:cardBackgroundColor="@color/cardview_initial_background"
+            card_view:cardCornerRadius="8dp"
+            android:layout_marginLeft="@dimen/margin_large"
+            android:layout_marginRight="@dimen/margin_large"
+            card_view:cardUseCompatPadding="true"
+            android:clickable="true">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
             <TextView
-                android:layout_width="@dimen/seekbar_label_length"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:text="@string/cardview_elevation_seekbar_text"
-                />
-            <SeekBar
-                android:id="@+id/cardview_elevation_seekbar"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_medium"
+                android:text="@string/text3"
                 />
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
+
     </LinearLayout>
 </ScrollView>
