--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,85 +13,80 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <LinearLayout android:layout_width="match_parent"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:dividerPadding="4dp"
-        android:weightSum="1">
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardBackgroundColor="@color/cardview_initial_background"
+        card_view:cardCornerRadius="8dp"
+        android:layout_marginLeft="@dimen/margin_large"
+        android:layout_marginRight="@dimen/margin_large"
+        card_view:cardUseCompatPadding="true"
+        android:clickable="true"
+        android:layout_above="@+id/cardview2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="26dp"
+        app:cardElevation="0dp">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardview"
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/cardtext1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            card_view:cardBackgroundColor="@color/cardview_initial_background"
-            card_view:cardCornerRadius="8dp"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginRight="@dimen/margin_large"
-            card_view:cardUseCompatPadding="true"
-            android:layout_weight="0.63"
-            android:clickable="true"
-            card_view:cardElevation="8dp"
-            >
+            android:layout_margin="@dimen/margin_medium"
+            android:text="@string/text1"
+            />
 
-            <TextView
-                android:id="@+id/cardtext1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:text="@string/text1"
-                />
+    </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardBackgroundColor="@color/cardview_initial_background"
+        card_view:cardCornerRadius="8dp"
+        android:layout_marginLeft="@dimen/margin_large"
+        android:layout_marginRight="@dimen/margin_large"
+        card_view:cardUseCompatPadding="true"
+        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="148dp">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardview2"
-            android:layout_width="fill_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            card_view:cardBackgroundColor="@color/cardview_initial_background"
-            card_view:cardCornerRadius="8dp"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginRight="@dimen/margin_large"
-            card_view:cardUseCompatPadding="true"
-            android:clickable="true"
-            card_view:cardElevation="0dp">
+            android:layout_margin="@dimen/margin_medium"
+            android:text="@string/text3"
+            />
+    </android.support.v7.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:text="@string/text2"
-                />
-        </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardview3"
-            android:layout_width="fill_parent"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardBackgroundColor="@color/cardview_initial_background"
+        card_view:cardCornerRadius="8dp"
+        android:layout_marginLeft="@dimen/margin_large"
+        android:layout_marginRight="@dimen/margin_large"
+        card_view:cardUseCompatPadding="true"
+        android:clickable="true"
+        card_view:cardElevation="0dp"
+        android:layout_marginBottom="86dp"
+        android:layout_alignBottom="@+id/cardview3">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            card_view:cardBackgroundColor="@color/cardview_initial_background"
-            card_view:cardCornerRadius="8dp"
-            android:layout_marginLeft="@dimen/margin_large"
-            android:layout_marginRight="@dimen/margin_large"
-            card_view:cardUseCompatPadding="true"
-            android:clickable="true">
+            android:layout_margin="@dimen/margin_medium"
+            android:text="@string/text2"
+            />
+    </android.support.v7.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_medium"
-                android:text="@string/text3"
-                />
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
 
 </RelativeLayout>
